[project]
name = "ai-guard-gateway"
version = "0.1.0"
description = "Gateway de seguridad para endpoints de IA expuestos"
authors = [
    {name = "Pedro Sordo Martínez",email = "amurlaniakea@gmail.com"}
]
license = "AGPL-3.0-or-later"
requires-python = "^3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.0",
    "httpx==0.28.1",
    "pyjwt==2.13.0",
    "prometheus-client==0.25.0",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core==2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "bandit==1.9.4",
    "flake8==7.3.0",
    "pytest-cov==7.1.0"
]
